@@ -100,6 +100,9 @@ Ver.6-dev (in development)
 - The jQuery-File-Upload (Ver.1.1 or later) widget supports the post only mode. It can preview the file.
   The sample is /samples/Sample_webpage/fileuploadPost_jQuery_MySQL.html.
 - Remove unused function hex2bin_for53 in IMUtil class.
+- The 'count' key is introduced into the context definition. It specifies any entity in the db and refers as a table
+  to get COUNT(*) value. If the 'view' key referring any view which is take a time, the 'count' key can refer any
+  table which represents the same result as the view.
 
 Ver.5.11 (November 17, 2019)
 - Support FileMaker Data API of FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
